# webuniverse

./: .gitignore  Cargo.toml  README.md  build  run
.cargo/: config.toml
data/: cert.pem  key.pem  users.wdb
wu/: Cargo.toml
wu-api/: Cargo.toml
wu-api/src/: common.rs  data.rs  main.rs  utils.rs
wu-api/src/api/: logins.rs  mod.rs  server.rs  servers.rs  settings.rs  user.rs  users.rs
wu-api/src/client_api/: mod.rs  server.rs
wu-api/src/client_api/handlers/: add.rs  mod.rs  stats.rs
wu-app/: config.js  index.html  index.js
wu-app/app/: create_user.html  create_user.js  index.html  index.js  server.html  server.js  servers.html  servers.js  settings.html  settings.js  user.html  user.js  users.html  users.js
wu-app/css/: custom.css
wu-app/js/: common.js  index.js
wu-client/: Cargo.toml
wu-client/src/: common.rs  main.rs  utils.rs
wu-client/src/handlers/: add.rs  stats.rs
wu-web/: Cargo.toml
wu-web/src/: lib.rs
wu/src/: crypto.rs  lib.rs  net.rs
wu/src/crypto/: aes.rs  argon2.rs  mod.rs  rand.rs  sha.rs
