[package]
name = "wu-web"
version = "0.0.1-beta.1"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2024"

[dependencies]
wu = { path = "../wu" }
console_error_panic_hook = "0.1.7"
getrandom_02 = { package = "getrandom", version = "0.2.16", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3.3", features = [
    "wasm_js",
] }

[lib]
crate-type = ["cdylib", "rlib"]
