[package]
name = "wu"
version = "0.0.1-beta.0"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2024"

[dependencies]
kern = "1.8.3"
sha3 = "0.11.0"
hex = "0.4.3"
rust-argon2 = "3.0.0"
rand = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
aes-gcm = "0.11.0-rc.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.120"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
